[FIX] several small things Added server load displaying again Navbar has Slick slider on all sub menus in case that the page gets too small. Job Manager has the Job List on the left to show the user the currently displayed jobs as well as all their jobs.

--- a/app/assets/styles/index.css
+++ b/app/assets/styles/index.css
@@ -588,7 +588,7 @@ td#separator {
 }
 
 
-td#lastJobName {
+td#lastJob {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -707,17 +707,26 @@ td#joblistIcon i {
     margin-right: 7px;
 }
 
-.liveTable li:nth-child(-n+3) {
+.liveTable li.green {
     background: rgba(255,255,255,0.9);
     box-shadow: inset 0px 0px 10px 2px rgba(0, 180, 40, 0.83), 0px 0px 4px rgba(143, 243, 0, 0.49);
 }
 
-.liveTable li:nth-child(n+4) {
-    box-shadow: inset 0px 0px 10px 1px rgba(117,182,255,0.4),
-    0px 0px 20px rgba(117,182,255,0.1);
+.liveTable li.yellow {
+    background: rgba(255,255,255,0.9);
+    box-shadow: inset 0px 0px 10px 2px rgba(180, 180, 0, 0.83), 0px 0px 4px rgba(243, 243, 0, 0.49);
 }
 
-.liveTable li:nth-child(5) {
+.liveTable li.red {
+    background: rgba(255,255,255,0.9);
+    box-shadow: inset 0px 0px 10px 2px rgba(180, 0, 40, 0.83), 0px 0px 4px rgba(243, 0, 10, 0.49);
+}
+
+.liveTable li.gray {
+    box-shadow: inset 0px 0px 10px 1px rgba(117,182,255,0.4),  0px 0px 20px rgba(117,182,255,0.1);
+}
+
+.liveTable li.pulsating {
     -webkit-animation: pulse 1s alternate infinite;
     -moz-animation: pulse 1s alternate infinite;
 }
